--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Personal Site",
   "main": "public/index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack -p",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,27 @@
   "bugs": {
     "url": "https://github.com/nicomitchell/nicomitchell.github.io/issues"
   },
-  "homepage": "https://github.com/nicomitchell/nicomitchell.github.io#readme"
+  "homepage": "https://github.com/nicomitchell/nicomitchell.github.io#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.1.0",
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.0.0",
+    "ui-box": "^3.0.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-root-import": "^6.4.1",
+    "css-loader": "^3.4.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^5.1.2"
+  }
 }
