--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-root-import": "^6.4.1",
     "css-loader": "^3.4.2",
+    "gh-pages": "^2.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^5.1.2"
