--- a/config.toml
+++ b/config.toml
@@ -115,7 +115,7 @@ url = "https://twitter.com/NitroMissile/"
 name = "LinkedIn"
 icon = "fa fa-linkedin"
 weight = 4
-url = "https://www.linkedin.com/in/johndoe/"
+url = "https://www.linkedin.com/in/nicolas-mitchell-b22185149/"
 
 [languages.en]
 languageName = ":us:"
